[project]
name = "ecg-arrhythmia-mitbih"
version = "0.1.0"
description = "ECG arrhythmia classification on MIT-BIH: class imbalance, focal loss, Grad-CAM"
requires-python = ">=3.11"
dependencies = [
    "wfdb",
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "torch",
    "plotly",
    "pyyaml",
    "tqdm",
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
